# pxm

./: .gitattributes  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
registry/aider-install/: prompt.md  pxm.toml
registry/apt-base/: prompt.md  pxm.toml
registry/claude-install/: prompt.md  pxm.toml
registry/codex-install/: prompt.md  pxm.toml
registry/gemini-install/: prompt.md  pxm.toml
registry/npm-base/: prompt.md  pxm.toml
registry/opencode-install/: prompt.md  pxm.toml
registry/postgres-install/: CHANGELOG.md  prompt.md  pxm.toml
registry/repo-management/: prompt.md  pxm.toml
registry/ripgrep-install/: prompt.md  pxm.toml
registry/verify-binary/: prompt.md  pxm.toml
src/: agent.rs  exec.rs  harness.rs  lockfile.rs  main.rs  manifest.rs  registry.rs  resolve.rs  ui.rs
